[tool.poetry]
name = "causalmediationanalysis"
version = "0.1.0"
description = "Code for for the paper Causal Mediation Analysis for Interpreting Neural NLP: The Case of Gender Bias"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "causalmediationanalysis" }
]

[tool.poetry.dependencies]
python = "^3.7"
transformers = "<3"
#scipy = "<=1.7.3"
#tqdm = "^4.64.1"
#torch = "^1.12.1"

[tool.poetry.group.dev.dependencies]
poetry = "^1.2.2"
pathlib = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
